[package]
name = "blitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blc"
path = "src/compiler/main.rs"

[[bin]]
name = "blitz"
path = "src/runtime/main.rs"

[dependencies]
file-utils = "0.1.5"
mmap-rs = "0.5.0"
